[gd_scene load_steps=8 format=3 uid="uid://dneqlm5a8bowx"]

[ext_resource type="Script" path="res://old/misc/weapons/melee_weapon.gd" id="1_jrx4q"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_r87sw"]
size = Vector2(75, 12)

[sub_resource type="Animation" id="Animation_0y6d7"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_gvr4b"]
resource_name = "attack_1"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 3.14159]
}

[sub_resource type="Animation" id="Animation_rr61b"]
resource_name = "attack_2"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [3.14159, 0.0]
}

[sub_resource type="Animation" id="Animation_xb8pb"]
resource_name = "attack_3"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 6.28319]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_3hypr"]
_data = {
"RESET": SubResource("Animation_0y6d7"),
"attack_1": SubResource("Animation_gvr4b"),
"attack_2": SubResource("Animation_rr61b"),
"attack_3": SubResource("Animation_xb8pb")
}

[node name="ShortSword" type="Node2D"]
script = ExtResource("1_jrx4q")

[node name="HitBox" type="Area2D" parent="."]
rotation = 4.71239
collision_layer = 16
collision_mask = 4

[node name="Collision" type="CollisionShape2D" parent="HitBox"]
position = Vector2(38, 0)
shape = SubResource("RectangleShape2D_r87sw")
disabled = true

[node name="AttackDurationTimer" type="Timer" parent="HitBox"]
wait_time = 0.5
one_shot = true

[node name="AttackDelayTimer" type="Timer" parent="HitBox"]
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_3hypr")
}

[connection signal="area_entered" from="HitBox" to="." method="_on_hit_box_area_entered"]
[connection signal="timeout" from="HitBox/AttackDurationTimer" to="." method="_on_attack_duration_timer_timeout"]
[connection signal="timeout" from="HitBox/AttackDelayTimer" to="." method="_on_attack_delay_timer_timeout"]
